<resources>
    <string name="app_name">智慧空中种植园操作系统</string>
    <string name="text_register">注 册</string>
    <string name="getvarificationcode">开始验证</string>
    <string name="registHintIn4">请输入验证码</string>
    <string name="registHintIn1">请输入您的账号名</string>
    <string name="registHintIn2">请输入您的密码</string>
    <string name="registHintIn3">请再一次输入您的密码</string>
    <string name="loginHintIn1">请输入账号:</string>
    <string name="loginHintIn2">请输入密码：</string>
    <string name="text_Login_login">登 录</string>
    <string name="text_Login_register">新用户注册</string>
    <string name="text_Login_remember">记住密码</string>
    <string name="regist_tv_title1">新用户注册：</string>
    <string name="regist_tc_back">返回</string>
    <string name="setting_tv_main">设置</string>
    <string name="about_tv_main">关于我们</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
