<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/RegistTheme"
    tools:context=".RegistActivity"
    tools:layout_editor_absoluteY="25dp">
    <!--这里代码的是创建一个标题栏，左边是返回键-->
    <!--我们设置RelativeLayout布局，id = "title_bar"-->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/title_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"

        app:layout_constraintBottom_toTopOf="@+id/tv_title1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--一个是显示返回键，一个是显示标题框-->
        <!--通过TextView来显示，id ： tv_back , tv_main_title -->
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/back002"
            android:gravity="center"
            android:text="返回"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <!--其中android:background="@drawable/go_back_selector"为点击回退键时，会变化效果，其实就是一个点击更换个图片而已。-->
        <!--我们先用这种老方法，接下来以后的文章才做代码优化效果-->
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/usename_et_ra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/registHintIn1"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="134dp" />

        <EditText
            android:id="@+id/password1_et_ra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/registHintIn2"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="202dp" />

        <EditText
            android:id="@+id/password2_et_ra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/registHintIn3"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="294dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/register_btn_ra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title2">


    </LinearLayout>

    <Button
        android:id="@+id/register_btn_ra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/text_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_title1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/regist_tv_title1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_title2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar" />

    <TextView
        android:id="@+id/tv_title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:text="密码由数字、字母、或符号组成，推荐采用6至12位由字母与数字混合组成的密码，这样安全系数更高哦"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title1" />
</android.support.constraint.ConstraintLayout>